--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,6 +96,7 @@
 	</dependencies>
 
 	<build>
+	    <finalName>project</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
