--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     volumes:
       - ./database:/var/lib/postgresql/data
     restart: unless-stopped
+    networks:
+      - external_network
 
   backend:
     build:
