--- a/front-vite/dockerFile
+++ b/front-vite/dockerFile
@@ -1,23 +1,29 @@
-# Usa la imagen base de Node.js
-FROM node:14
+#Usa la imagen base de Node.js para compilar la aplicación
+FROM node:20 as build 
 
-# Establece el directorio de trabajo en /usr/src/app
+#Establece el directorio de trabajo en /usr/src/app
 WORKDIR /usr/src/app
 
-# Copia el archivo package.json y package-lock.json (si existe)
+#Copia el archivo package.json y package-lock.json (si existe)
 COPY package*.json ./
 
-# Instala las dependencias
+#Instala las dependencias
 RUN npm install
 
-# Copia el código fuente de la aplicación
+#Copia el código fuente de la aplicación
 COPY . .
 
-# Compila la aplicación React para producción
+#Compila la aplicación React para producción
 RUN npm run build
 
-# Expone el puerto 3000 en el contenedor
-EXPOSE 3000
+#Utiliza la imagen base de NGINX
+FROM nginx:alpine
 
-# Define el comando a ejecutar cuando se inicie el contenedor
-CMD ["npm", "start"]
+COPY --from=build /usr/src/app/dist /usr/share/nginx/html
+
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+
+CMD ["nginx", "-g", "daemon off;"]
